maj login et hover bouton

--- a/FrontEnd/login.html
+++ b/FrontEnd/login.html
@@ -26,7 +26,7 @@
             <li>projets</li>
             <li>contact</li>
             <li>login</li>
-            <li><img src="./assets/icons/instagram.png" alt="Instagram" /></li>
+            <li><a href="index.html"><img src="./assets/icons/instagram.png" alt="Instagram" /></li></a>
           </ul>
         </nav>
       </header>
@@ -34,7 +34,7 @@
         <h2>Log In</h2>
         <p class="login_not_ok"></p>
         <form class="form_connection" action="#" method="post">
-            <label for="email">Email</label>
+            <label for="email">E-mail</label>
             <input type="email"name="email" id="email">
             <label for="password">Mot de Passe</label>
             <input type="password"name="password" id="password">
