--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -10,6 +10,7 @@
 	<meta name="description" content="">
 	<link rel="stylesheet" href="./assets/Css/style.css">
 	<script type="module" src="./assets/script/data.js"> defer</script>
+	<script type="module" src="./assets/script/data_connected.js"> defer</script>
 
 </head>
 <body>
@@ -19,7 +20,7 @@
 		<ul>
 			<li>projets</li>
 			<li>contact</li>
-			<li><a href="login.html">login</li></a> 
+			<li id="button_login"><a href="login.html">login</li></a> 
 			<li><img src="./assets/icons/instagram.png" alt="Instagram"></li>
 		</ul>
 	</nav>
