--- a/FrontEnd/login.html
+++ b/FrontEnd/login.html
@@ -13,9 +13,8 @@
     <meta name="description" content="" />
     <link rel="stylesheet" href="./assets/Css/style.css" />
     <link rel="stylesheet" href="./assets/Css/login.css">
-    <script type="module" src="./assets/script/login.js">
-      defer
-    </script>
+    <script type="module" src="./assets/script/login.js">defer</script>
+    <script type="module" src="./assets/script/data_connected.js"> defer</script>
   </head>
   <body>
     <main>
