suppression 2eJs + maj bouton login/out TOKEN

--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -5,7 +5,10 @@
     <title>Sophie Bluel - Architecte d'intérieur</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <script src="https://kit.fontawesome.com/5a7c239155.js" crossorigin="anonymous"></script>
+    <script
+      src="https://kit.fontawesome.com/5a7c239155.js"
+      crossorigin="anonymous"
+    ></script>
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
       href="https://fonts.googleapis.com/css2?family=Syne:wght@700;800&family=Work+Sans&display=swap"
@@ -124,7 +127,7 @@
         </ul>
       </nav>
     </footer>
-    
+
     <aside>
       <div id="modale" class="modale">
         <div class="modale-contenu">
@@ -133,15 +136,13 @@
           <div id="modale-gallery" class="modale-gallery">
             <!-- La galerie de photos sera ajoutée ici dynamiquement via JavaScript -->
           </div>
-          <input type="submit" value="Ajouter une photo" id=""></span>
+          <div class="greybar"></div>
+          <input type="submit" value="Ajouter une photo" id="" />
         </div>
       </div>
     </aside>
-          <script src="./assets/script/data.js">
-            defer
-          </script>
-          <script src="./assets/script/data_connected.js">
-            defer
-          </script>
+    <script src="./assets/script/data.js">
+      defer
+    </script>
   </body>
 </html>
