modale 2 fini + maj css

--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -141,6 +141,52 @@
         </div>
       </div>
     </aside>
+    <aside>
+      <div id="modale2" class="modale">
+        <div class="modale-contenu">
+          <div class="closed" id="closeModale2">&times;</div>
+          <h2>Ajout photo</h2>
+          <form id="formulaireAjoutProjet">
+            <div class="modale-gallery2">
+              <div class="mountaincontainer">
+                <i class="fa-solid fa-mountain-sun fa-flip-horizontal"></i>
+                <label for="imageUrl" class="AddPicturePhrase ImgUploadBtn"
+                  >+ Ajouter photo</label
+                >
+                <input
+                  type="file"
+                  id="imageUrl"
+                  name="imageUrl"
+                  accept="image/jpeg, image/png"
+                  class="formField"
+                />
+                <label for="imageUrl" class="imgFormatAlert"
+                  >jpg, png : 4mo max</label
+                >
+              </div>
+              <div class="modalContent">
+                <div class="modalTitleContainer">
+                  <label class="modalTitle">Titre</label>
+                  <input type="text" id="modalTitle" name="modalTitle"
+                  placeholder=" Titre"
+                </div>
+                <div class="modalCategoryContainer">
+                  <label class="modalCategory">Catégorie</label>
+                  <input
+                    type="text"
+                    id="modalCategory"
+                    name="modalCategory"
+                    placeholder="categorie"
+                  />
+                </div>
+              </div>
+                <div class="greybar2"></div>
+                  <input type="submit" value="Valider" id="" /></div>
+                
+          </form>
+        </div>
+      </div>
+    </aside>
     <script src="./assets/script/data.js">
       defer
     </script>
