--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -176,7 +176,9 @@
                     id="selectorCategory"
                     name="modalCategory"
                     class="modalCategory"
-                  ></select>
+                  >
+                    <option value=""></option>
+                  </select>
                 </div>
               </div>
               <div class="greybar2"></div>
