test envoi fetch 1 erreur 500

--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -54,10 +54,7 @@
         </article>
       </section>
       <section id="portfolio">
-        <h2>
-          Mes Projets
-          <button class="btn_modifier" id="btnModifier">modifier</button>
-        </h2>
+        <h2 id="projectTitle">Mes Projets</h2>
         <div class="gallery"></div>
       </section>
       <section id="contact">
