Finalisation + couleur validate modale 2

--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -90,7 +90,7 @@
           >
             &times;
           </div>
-          <h2>Galerie de photos</h2>
+          <h2>Galerie photos</h2>
           <div id="modale-gallery" class="modale-gallery"></div>
           <div class="greybar"></div>
           <input type="submit" value="Ajouter une photo" id="" />
@@ -100,6 +100,9 @@
     <aside>
       <div id="modale2" class="modale">
         <div class="modale-contenu2">
+          <div class="returnBack" id="returnBack">
+            <i class="fa-solid fa-arrow-left"></i>
+          </div>
           <div class="closed closeModale2" close id="closeModale2">&times;</div>
           <h2>Ajout photo</h2>
           <form id="formulaireAjoutProjet">
@@ -124,7 +127,7 @@
                 <div class="modalTitleContainer">
                   <label class="textTitle">Titre</label>
                   <input type="text" id="selectorTitle" name="modalTitle"
-                  placeholder=" Titre"
+                  placeholder=" "
                 </div>
                 <div class="modalCategoryContainer">
                   <label class="textCategory">Catégorie</label>
