--- a/FrontEnd/login.html
+++ b/FrontEnd/login.html
@@ -12,8 +12,7 @@
     />
     <meta name="description" content="" />
     <link rel="stylesheet" href="./assets/Css/style.css" />
-    <link rel="stylesheet" href="./assets/Css/login.css">
-    
+    <link rel="stylesheet" href="./assets/Css/login.css" />
   </head>
   <body>
     <main>
@@ -24,7 +23,11 @@
             <li>projets</li>
             <li>contact</li>
             <li>login</li>
-            <li><a href="index.html"><img src="./assets/icons/instagram.png" alt="Instagram" /></li></a>
+            <li>
+              <a href="index.html"
+                ><img src="./assets/icons/instagram.png" alt="Instagram"
+              /></a>
+            </li>
           </ul>
         </nav>
       </header>
@@ -33,11 +36,11 @@
         <p class="login_not_ok"></p>
         <form class="form_connection" action="#" method="post">
           <label for="email">E-mail</label>
-          <input type="email"name="email" id="email">
+          <input type="email" name="email" id="email" />
           <label for="password">Mot de Passe</label>
-          <input type="password"name="password" id="password">
-          <input type="submit" value="Se connecter" class="login_ok">
-          <a href="#">Mot de passe oublié</a> 
+          <input type="password" name="password" id="password" />
+          <input type="submit" value="Se connecter" class="login_ok" />
+          <a href="#">Mot de passe oublié</a>
         </form>
       </section>
     </main>
@@ -48,7 +51,8 @@
         </ul>
       </nav>
     </footer>
-    <script type="module" src="./assets/script/login.js">defer</script>
+    <script type="module" src="./assets/script/login.js">
+      defer
+    </script>
   </body>
-  </html>
-  
+</html>
